fix lint warnings